--- a/index.html
+++ b/index.html
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Untitled</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DS INFO TECH</title>
+    <title>DS INFO TECH - Software Solutions</title> <!-- Updated Tab Title -->
     <link rel="stylesheet" href="styles.css"> <!-- Ensure this path is correct -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-    <link rel="icon" href="https://i.ibb.co/qMh3fNCQ/document.png" type="image/png">
+    <link rel="icon" href="https://i.ibb.co/xSqqnwV2/project-management-1087840.png" type="image/png"> <!-- Updated Favicon -->
     <!-- Include pdf-lib and pdfjs-dist -->
     <script src="https://unpkg.com/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js"></script>
@@ -316,7 +306,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 DS INFO TECH | DESIGN BY SIDDHA BATALA</p>
+            <p>&copy; 2025 DS INFO TECH | All Rights Reserved</p>
             <div class="social-media">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -337,9 +327,4 @@
     <script src="script.js"></script>
 </body>
 
-</html>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
-</body>
 </html>
