--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Untitled</title>
+  <title>DS INFO TECH</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
