--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://i.ibb.co/GvyW5RXN/utilities-1.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <h1>Hamro Utility</h1>
-                <p>Daily Essentials for Every Nepali</p>
+                <img src="https://i.ibb.co/GvyW5RXN/utilities-1.png" alt="Hamro Utility Logo" height="40">
+                <div class="logo-text">
+                    <h1>Hamro Utility</h1>
+                    <p>Daily Essentials for Every Nepali</p>
+                </div>
             </div>
             <nav>
                 <ul>
@@ -83,7 +86,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="assets/nepal-illustration.svg" alt="Nepali cultural illustration" loading="lazy">
+                    <img src="https://i.ibb.co/27mJ9nMw/1744468655903i2rg7dwg.webp" alt="Nepali cultural illustration" loading="lazy">
                 </div>
             </div>
         </section>
@@ -203,7 +206,6 @@
         <section class="calendar-section">
             <div class="container">
                 <h2>Nepali Calendar</h2>
-                <!-- Start of nepali calendar widget -->
                 <div id="nepali-calendar-widget">
                     <script type="text/javascript">
                         var nc_width = 'responsive';
@@ -213,14 +215,12 @@
                     <script type="text/javascript" src="https://www.ashesh.com.np/nepali-calendar/js/ncf.js?v=5"></script>
                     <div id="ncwidgetlink"></a></div>
                 </div>
-                <!-- End of nepali calendar widget -->
             </div>
         </section>
 
         <section class="events-section">
             <div class="container">
                 <h2>Upcoming Events</h2>
-                <!-- Start of upcoming event widget -->
                 <div id="upcoming-events-widget">
                     <script type="text/javascript">
                         var nc_ev_width = 'responsive';
@@ -231,7 +231,6 @@
                     <script type="text/javascript" src="https://www.ashesh.com.np/calendar-event/ev.js"></script>
                     <div id="ncwidgetlink"></a></div>
                 </div>
-                <!-- End of upcoming event widget -->
             </div>
         </section>
 
@@ -240,7 +239,7 @@
                 <h2>About Hamro Utility</h2>
                 <div class="about-content">
                     <div class="about-text">
-                        <p>Hamro Utility was created to provide essential daily tools for Nepali people in one convenient, mobile-friendly platform. Our goal is to make everyday tasks easier, whether you're checking dates, gold prices, or weather forecasts.</p>
+                        <p>Hamro Utility was created by Siddh Batala to provide essential daily tools for Nepali people in one convenient, mobile-friendly platform. Our goal is to make everyday tasks easier, whether you're checking dates, gold prices, or weather forecasts.</p>
                         <p>All our tools are designed with simplicity and speed in mind, ensuring they work well even on low-bandwidth connections common in many parts of Nepal.</p>
                         <h3>Our Features</h3>
                         <ul>
@@ -254,7 +253,7 @@
                         </ul>
                     </div>
                     <div class="about-image">
-                        <img src="assets/tools.svg" alt="Nepal map illustration" loading="lazy">
+                        <img src="https://i.ibb.co/xSkmwqXN/pngwing-com.png" alt="Nepal map illustration" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -265,7 +264,7 @@
                 <h2>Contact Us</h2>
                 <div class="contact-content">
                     <div class="contact-illustration">
-                        <img src="assets/contact-illustration.svg" alt="Contact us illustration" loading="lazy">
+                        <img src="https://i.ibb.co/chWFNyFC/Contact-us-pana.png" alt="Contact us illustration" loading="lazy">
                     </div>
                     <div class="contact-info">
                         <h3>Get in Touch</h3>
@@ -320,6 +319,7 @@
                 <div class="footer-col">
                     <h3>Hamro Utility</h3>
                     <p>Daily essentials for every Nepali. Simple, fast, and reliable tools for your everyday needs.</p>
+                    <a href="about-developer.html" class="btn btn-outline btn-sm">About Developer</a>
                 </div>
                 <div class="footer-col">
                     <h3>Quick Links</h3>
@@ -360,6 +360,7 @@
                 <div class="footer-links">
                     <a href="privacy-policy.html">Privacy Policy</a>
                     <a href="terms-of-service.html">Terms of Service</a>
+                    <a href="about-developer.html">About Developer</a>
                 </div>
             </div>
         </div>
