--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <i class="fas fa-calendar-alt"></i>
                         </div>
                         <div class="content">
-                            <h3>Date</h3>
+                            <h3>Date & Time</h3>
                             <iframe scrolling="no" border="0" frameborder="0" marginwidth="0" marginheight="0" allowtransparency="true" src="https://www.ashesh.com.np/linknepali-time.php?time_only=no&font_color=333333&aj_time=yes&font_size=14&line_brake=1&api=132243p179" width="195" height="45"></iframe>
                         </div>
                     </div>
