--- a/index.html
+++ b/index.html
@@ -96,12 +96,18 @@
                 <h2>Today's Snapshot</h2>
                 <div class="snapshot-grid">
                     <div class="snapshot-card">
+                        <div class="icon">
+                            <img src="https://i.ibb.co/RTtZwTwf/calendar-14393098.png" alt="Date and Time" class="custom-icon">
+                        </div>
                         <div class="content">
                             <h3>Date & Time</h3>
                             <iframe scrolling="no" border="0" frameborder="0" marginwidth="0" marginheight="0" allowtransparency="true" src="https://www.ashesh.com.np/linknepali-time.php?time_only=no&font_color=333333&aj_time=yes&font_size=14&line_brake=1&api=132243p179" width="195" height="45"></iframe>
                         </div>
                     </div>
                     <div class="snapshot-card">
+                        <div class="icon">
+                            <img src="https://i.ibb.co/V0Ty4WB2/gold-15751000.png" alt="Gold Price" class="custom-icon">
+                        </div>
                         <div class="content">
                             <h3>Gold Price</h3>
                             <p class="gold-price">24K: <span id="gold-price-24k">Loading...</span></p>
@@ -109,6 +115,9 @@
                         </div>
                     </div>
                     <div class="snapshot-card">
+                        <div class="icon">
+                            <img src="https://i.ibb.co/Nd7xzqXr/currency-exchange-7169285.png" alt="Forex Rates" class="custom-icon">
+                        </div>
                         <div class="content">
                             <h3>Forex Rates</h3>
                             <div class="forex-rates">
@@ -125,6 +134,9 @@
                         </div>
                     </div>
                     <div class="snapshot-card">
+                        <div class="icon">
+                            <img src="https://i.ibb.co/PsrYBgR6/weather-1243442.png" alt="Weather" class="custom-icon">
+                        </div>
                         <div class="content">
                             <h3>Weather</h3>
                             <div class="weather-info">
@@ -145,14 +157,14 @@
                 <div class="tools-grid">
                     <a href="date-converter.html" class="tool-card">
                         <div class="icon">
-                            <img src="https://i.ibb.co/vxh4ZJ56/deadline-14354278.png" alt="Date Converter" class="custom-icon">
+                            <img src="https://i.ibb.co/RTtZwTwf/calendar-14393098.png" alt="Date Converter" class="custom-icon">
                         </div>
                         <h3>Date Converter</h3>
                         <p>Convert between AD and BS dates</p>
                     </a>
                     <a href="calendar.html" class="tool-card">
                         <div class="icon">
-                            <img src="https://i.ibb.co/vxh4ZJ56/deadline-14354278.png" alt="Calendar" class="custom-icon">
+                            <i class="fas fa-calendar"></i>
                         </div>
                         <h3>Calendar</h3>
                         <p>Nepali calendar with events</p>
@@ -180,7 +192,7 @@
                     </a>
                     <a href="astro.html" class="tool-card">
                         <div class="icon">
-                            <img src="https://i.ibb.co/rGNrj16y/orbit-7027211.png" alt="Astro Summary" class="custom-icon">
+                            <i class="fas fa-star"></i>
                         </div>
                         <h3>Astro Summary</h3>
                         <p>Daily astrological information</p>
