--- a/index.html
+++ b/index.html
@@ -29,30 +29,31 @@
                             <div class="dropdown-grid">
                                 <div class="dropdown-column">
                                     <h4>Date & Time</h4>
-                                    <a href="date-converter.html">Date Converter</a>
-                                    <a href="calendar.html">Calendar</a>
-                                    <a href="nepali-time.html">Nepali Time</a>
+                                    <a href="date-converter.html"><img src="https://i.ibb.co/RTtZwTwf/calendar-14393098.png" alt="Date Converter" height="16"> Date Converter</a>
+                                    <a href="calendar.html"><img src="https://i.ibb.co/QvhzwvwL/calendar-14393098.png" alt="Calendar" height="16"> Calendar</a>
+                                    <a href="nepali-time.html"><img src="https://i.ibb.co/vxh4ZJ56/deadline-14354278.png" alt="Nepali Time" height="16"> Nepali Time</a>
                                 </div>
                                 <div class="dropdown-column">
                                     <h4>Financial</h4>
-                                    <a href="gold-price.html">Gold Price</a>
-                                    <a href="forex.html">Forex Rates</a>
+                                    <a href="gold-price.html"><img src="https://i.ibb.co/V0Ty4WB2/gold-15751000.png" alt="Gold Price" height="16"> Gold Price</a>
+                                    <a href="forex.html"><img src="https://i.ibb.co/Nd7xzqXr/currency-exchange-7169285.png" alt="Forex Rates" height="16"> Forex Rates</a>
                                 </div>
                                 <div class="dropdown-column">
                                     <h4>Utilities</h4>
-                                    <a href="weather.html">Weather</a>
-                                    <a href="astro.html">Astro Summary</a>
-                                    <a href="unit-converter.html">Unit Converter</a>
+                                    <a href="weather.html"><img src="https://i.ibb.co/PsrYBgR6/weather-1243442.png" alt="Weather" height="16"> Weather</a>
+                                    <a href="astro.html"><img src="https://i.ibb.co/rGNrj16y/orbit-7027211.png" alt="Astro Summary" height="16"> Astro Summary</a>
+                                    <a href="unit-converter.html"><img src="https://i.ibb.co/WvznMfwx/transfer-9201169.png" alt="Unit Converter" height="16"> Unit Converter</a>
                                 </div>
                                 <div class="dropdown-column">
                                     <h4>Nepali Typing</h4>
-                                    <a href="nepali-unicode.html">Nepali Unicode</a>
-                                    <a href="preeti-to-unicode.html">Preeti to Unicode</a>
-                                    <a href="unicode-to-preeti.html">Unicode to Preeti</a>
+                                    <a href="nepali-unicode.html"><img src="https://i.ibb.co/TqK54wkQ/communication-13573106.png" alt="Nepali Unicode" height="16"> Nepali Unicode</a>
+                                    <a href="preeti-to-unicode.html"><img src="https://i.ibb.co/TqK54wkQ/communication-13573106.png" alt="Preeti to Unicode" height="16"> Preeti to Unicode</a>
+                                    <a href="unicode-to-preeti.html"><img src="https://i.ibb.co/TqK54wkQ/communication-13573106.png" alt="Unicode to Preeti" height="16"> Unicode to Preeti</a>
                                 </div>
                             </div>
                         </div>
                     </li>
+                    <li><a href="blogs.html">Blogs</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -97,54 +98,43 @@
                 <div class="snapshot-grid">
                     <div class="snapshot-card">
                         <div class="icon">
-                            <img src="https://i.ibb.co/RTtZwTwf/calendar-14393098.png" alt="Date and Time" class="custom-icon">
+                            <img src="https://i.ibb.co/vxh4ZJ56/deadline-14354278.png" alt="Date and Time" height="40">
                         </div>
                         <div class="content">
-                            <h3>Date & Time</h3>
-                            <iframe scrolling="no" border="0" frameborder="0" marginwidth="0" marginheight="0" allowtransparency="true" src="https://www.ashesh.com.np/linknepali-time.php?time_only=no&font_color=333333&aj_time=yes&font_size=14&line_brake=1&api=132243p179" width="195" height="45"></iframe>
+                            <h3>Date</h3>
+                            <div id="nepali-time-widget">
+                                <iframe scrolling="no" border="0" frameborder="0" marginwidth="0" marginheight="0" allowtransparency="true" src="https://www.ashesh.com.np/linknepali-time.php?time_only=no&font_color=333333&aj_time=yes&font_size=14&line_brake=1&api=472041p562" width="195" height="45"></iframe>
+                            </div>
                         </div>
                     </div>
                     <div class="snapshot-card">
                         <div class="icon">
-                            <img src="https://i.ibb.co/V0Ty4WB2/gold-15751000.png" alt="Gold Price" class="custom-icon">
+                            <img src="https://i.ibb.co/V0Ty4WB2/gold-15751000.png" alt="Gold Price" height="40">
                         </div>
                         <div class="content">
                             <h3>Gold Price</h3>
-                            <p class="gold-price">24K: <span id="gold-price-24k">Loading...</span></p>
-                            <p class="gold-change"><span id="gold-change-24k"></span></p>
+                            <p class="gold-price">Loading...</p>
+                            <p class="gold-change">Loading...</p>
                         </div>
                     </div>
                     <div class="snapshot-card">
                         <div class="icon">
-                            <img src="https://i.ibb.co/Nd7xzqXr/currency-exchange-7169285.png" alt="Forex Rates" class="custom-icon">
+                            <img src="https://i.ibb.co/Nd7xzqXr/currency-exchange-7169285.png" alt="Forex Rates" height="40">
                         </div>
                         <div class="content">
-                            <h3>Forex Rates</h3>
-                            <div class="forex-rates">
-                                <div class="forex-rate">
-                                    <span class="currency-code">USD:</span>
-                                    <span class="usd-rate">Loading...</span>
-                                </div>
-                                <div class="forex-rate">
-                                    <span class="currency-code">EUR:</span>
-                                    <span class="eur-rate">Loading...</span>
-                                </div>
-                                <p class="forex-update">NRB Exchange Rate</p>
-                            </div>
+                            <h3>Forex</h3>
+                            <p class="usd-rate">Loading...</p>
+                            <p class="inr-rate">Loading...</p>
                         </div>
                     </div>
                     <div class="snapshot-card">
                         <div class="icon">
-                            <img src="https://i.ibb.co/PsrYBgR6/weather-1243442.png" alt="Weather" class="custom-icon">
+                            <img src="https://i.ibb.co/PsrYBgR6/weather-1243442.png" alt="Weather" height="40">
                         </div>
                         <div class="content">
                             <h3>Weather</h3>
-                            <div class="weather-info">
-                                <img class="weather-icon" src="" alt="">
-                                <p class="weather-temp">Loading...</p>
-                                <p class="weather-desc">Loading...</p>
-                                <p class="weather-location">Kathmandu</p>
-                            </div>
+                            <p class="weather-temp">Loading...</p>
+                            <p class="weather-desc">Loading...</p>
                         </div>
                     </div>
                 </div>
@@ -157,56 +147,56 @@
                 <div class="tools-grid">
                     <a href="date-converter.html" class="tool-card">
                         <div class="icon">
-                            <img src="https://i.ibb.co/RTtZwTwf/calendar-14393098.png" alt="Date Converter" class="custom-icon">
+                            <img src="https://i.ibb.co/RTtZwTwf/calendar-14393098.png" alt="Date Converter" height="40">
                         </div>
                         <h3>Date Converter</h3>
                         <p>Convert between AD and BS dates</p>
                     </a>
                     <a href="calendar.html" class="tool-card">
                         <div class="icon">
-                            <i class="fas fa-calendar"></i>
+                            <img src="https://i.ibb.co/QvhzwvwL/calendar-14393098.png" alt="Calendar" height="40">
                         </div>
                         <h3>Calendar</h3>
                         <p>Nepali calendar with events</p>
                     </a>
                     <a href="gold-price.html" class="tool-card">
                         <div class="icon">
-                            <img src="https://i.ibb.co/V0Ty4WB2/gold-15751000.png" alt="Gold Price" class="custom-icon">
+                            <img src="https://i.ibb.co/V0Ty4WB2/gold-15751000.png" alt="Gold Price" height="40">
                         </div>
                         <h3>Gold Price</h3>
                         <p>Today's gold rates in Nepal</p>
                     </a>
                     <a href="forex.html" class="tool-card">
                         <div class="icon">
-                            <img src="https://i.ibb.co/Nd7xzqXr/currency-exchange-7169285.png" alt="Forex Rates" class="custom-icon">
+                            <img src="https://i.ibb.co/Nd7xzqXr/currency-exchange-7169285.png" alt="Forex Rates" height="40">
                         </div>
                         <h3>Forex Rates</h3>
                         <p>Currency exchange rates</p>
                     </a>
                     <a href="weather.html" class="tool-card">
                         <div class="icon">
-                            <img src="https://i.ibb.co/PsrYBgR6/weather-1243442.png" alt="Weather" class="custom-icon">
+                            <img src="https://i.ibb.co/PsrYBgR6/weather-1243442.png" alt="Weather" height="40">
                         </div>
                         <h3>Weather</h3>
                         <p>Weather forecast for Nepal</p>
                     </a>
                     <a href="astro.html" class="tool-card">
                         <div class="icon">
-                            <i class="fas fa-star"></i>
+                            <img src="https://i.ibb.co/rGNrj16y/orbit-7027211.png" alt="Astro Summary" height="40">
                         </div>
                         <h3>Astro Summary</h3>
                         <p>Daily astrological information</p>
                     </a>
                     <a href="unit-converter.html" class="tool-card">
                         <div class="icon">
-                            <img src="https://i.ibb.co/WvznMfwx/transfer-9201169.png" alt="Unit Converter" class="custom-icon">
+                            <img src="https://i.ibb.co/WvznMfwx/transfer-9201169.png" alt="Unit Converter" height="40">
                         </div>
                         <h3>Unit Converter</h3>
                         <p>Convert various measurements</p>
                     </a>
                     <a href="nepali-unicode.html" class="tool-card">
                         <div class="icon">
-                            <img src="https://i.ibb.co/TqK54wkQ/communication-13573106.png" alt="Nepali Typing" class="custom-icon">
+                            <img src="https://i.ibb.co/TqK54wkQ/communication-13573106.png" alt="Nepali Typing" height="40">
                         </div>
                         <h3>Nepali Typing</h3>
                         <p>Type in Nepali Unicode</p>
@@ -300,9 +290,9 @@
                         </div>
                     </div>
                     <div class="contact-form">
-                        <form id="contactForm" action="https://api.web3forms.com/submit" method="POST">
+                        <form id="feedbackForm" action="https://api.web3forms.com/submit" method="POST">
                             <input type="hidden" name="access_key" value="d2575a55-86d0-47cc-9a8f-29970efa6d84">
-                            <input type="hidden" name="redirect" value="https://hamroutility.com/thank-you.html">
+                            <input type="hidden" name="redirect" value="https://yourwebsite.com/success.html">
                             
                             <div class="form-group">
                                 <label for="name">Name</label>
@@ -321,7 +311,7 @@
                                 <textarea id="message" name="message" rows="5" required></textarea>
                             </div>
                             <button type="submit" class="btn">Send Message</button>
-                            <div id="form-message" class="form-message"></div>
+                            <div id="form-result"></div>
                         </form>
                     </div>
                 </div>
@@ -341,6 +331,7 @@
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#tools">Tools</a></li>
+                        <li><a href="blogs.html">Blogs</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
@@ -359,6 +350,7 @@
                     <ul>
                         <li><a href="privacy-policy.html">Privacy Policy</a></li>
                         <li><a href="terms-of-service.html">Terms of Service</a></li>
+                        <li><a href="about-developer.html">About Developer</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
@@ -367,7 +359,6 @@
                     <form id="newsletterForm">
                         <input type="email" placeholder="Your email" required>
                         <button type="submit" class="btn">Subscribe</button>
-                        <div id="newsletter-message" class="form-message"></div>
                     </form>
                 </div>
             </div>
@@ -384,5 +375,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
+    <script>
+        document.getElementById('current-year').textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
