--- a/blogs.html
+++ b/blogs.html
@@ -118,7 +118,7 @@
                     
                     <article class="blog-card">
                         <div class="blog-image">
-                            <img src="https://i.ibb.co/7YcJZ1P/blog4.jpg" alt="Weather in Nepal" loading="lazy">
+                            <img src="https://i.ibb.co/bgJvQN9P/Chat-GPT-Image-Apr-24-2025-09-34-20-AM.png" alt="Weather in Nepal" loading="lazy">
                         </div>
                         <div class="blog-content">
                             <h2>Understanding Nepal's Weather Patterns</h2>
