--- a/blog-nepali-calendar.html
+++ b/blog-nepali-calendar.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Learn about the history and significance of the Bikram Sambat calendar system used in Nepal.">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" href="https://i.ibb.co/GvyW5RXN/utilities-1.png" type="image/x-icon">
+    <link rel="icon" href="https://i.ibb.co/7tytCyVM/a-zfv.png" type="image/x-icon">
     <style>
         /* Base Styles */
         :root {
