--- a/blogs.html
+++ b/blogs.html
@@ -82,7 +82,7 @@
                 <div class="blog-grid">
                     <article class="blog-card">
                         <div class="blog-image">
-                            <img src="https://i.ibb.co/0jq7Z0P/blog1.jpg" alt="Nepali Calendar System" loading="lazy">
+                            <img src="https://i.ibb.co/7tytCyVM/a-zfv.png" alt="Nepali Calendar System" loading="lazy">
                         </div>
                         <div class="blog-content">
                             <h2>Understanding the Nepali Calendar System</h2>
