--- a/blog-nepali-calendar.html
+++ b/blog-nepali-calendar.html
@@ -512,7 +512,7 @@
                 </div>
                 
                 <div class="blog-post-image">
-                    <img src="https://i.ibb.co/RkSpQ9nd/Chat-GPT-Image-Apr-24-2025-10-36-41-AM.png" alt="Nepali Calendar System" loading="lazy">
+                    <img src="https://i.ibb.co/7tytCyVM/a-zfv.png" alt="Nepali Calendar System" loading="lazy">
                 </div>
                 
                 <div class="blog-post-content">
