--- a/blogs.html
+++ b/blogs.html
@@ -94,7 +94,7 @@
                     
                     <article class="blog-card">
                         <div class="blog-image">
-                            <img src="https://i.ibb.co/6Y4WQ8J/blog2.jpg" alt="Gold Trading in Nepal" loading="lazy">
+                            <img src="https://i.ibb.co/tpk7ZZpP/Untitled-design.png" alt="Gold Trading in Nepal" loading="lazy">
                         </div>
                         <div class="blog-content">
                             <h2>Gold Trading in Nepal: What You Need to Know</h2>
