--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                                 <div class="dropdown-column">
                                     <h4>Date & Time</h4>
                                     <a href="date-converter.html"><img src="https://i.ibb.co/RTtZwTwf/calendar-14393098.png" alt="Date Converter" height="16"> Date Converter</a>
-                                    <a href="calendar.html"><img src="https://i.ibb.co/QvhzwvwL/calendar-14393098.png" alt="Calendar" height="16"> Calendar</a>
+                                    <a href="calendar.html"><img src="https://i.ibb.co/BHGk7m9s/calendar-1021914.png" alt="Calendar" height="16"> Calendar</a>
                                     <a href="nepali-time.html"><img src="https://i.ibb.co/vxh4ZJ56/deadline-14354278.png" alt="Nepali Time" height="16"> Nepali Time</a>
                                 </div>
                                 <div class="dropdown-column">
@@ -101,7 +101,7 @@
                             <img src="https://i.ibb.co/vxh4ZJ56/deadline-14354278.png" alt="Date and Time" height="40">
                         </div>
                         <div class="content">
-                            <h3>Date</h3>
+                            <h3>Date & Time</h3>
                             <div id="nepali-time-widget">
                                 <iframe scrolling="no" border="0" frameborder="0" marginwidth="0" marginheight="0" allowtransparency="true" src="https://www.ashesh.com.np/linknepali-time.php?time_only=no&font_color=333333&aj_time=yes&font_size=14&line_brake=1&api=472041p562" width="195" height="45"></iframe>
                             </div>
@@ -154,7 +154,7 @@
                     </a>
                     <a href="calendar.html" class="tool-card">
                         <div class="icon">
-                            <img src="https://i.ibb.co/QvhzwvwL/calendar-14393098.png" alt="Calendar" height="40">
+                            <img src="https://i.ibb.co/BHGk7m9s/calendar-1021914.png" alt="Calendar" height="40">
                         </div>
                         <h3>Calendar</h3>
                         <p>Nepali calendar with events</p>
