--- a/blogs.html
+++ b/blogs.html
@@ -130,7 +130,7 @@
                     
                     <article class="blog-card">
                         <div class="blog-image">
-                            <img src="https://i.ibb.co/0mX1y7G/blog5.jpg" alt="Forex in Nepal" loading="lazy">
+                            <img src="https://i.ibb.co/Fq6ZbDMR/Untitled-design-1.png" alt="Forex in Nepal" loading="lazy">
                         </div>
                         <div class="blog-content">
                             <h2>Forex Regulations in Nepal: A Complete Guide</h2>
