--- a/blogs.html
+++ b/blogs.html
@@ -106,7 +106,7 @@
                     
                     <article class="blog-card">
                         <div class="blog-image">
-                            <img src="https://i.ibb.co/8XJQY0R/blog3.jpg" alt="Nepali Typing" loading="lazy">
+                            <img src="https://i.ibb.co/C3NFBb2f/Chat-GPT-Image-Apr-24-2025-01-34-49-PM.png" alt="Nepali Typing" loading="lazy">
                         </div>
                         <div class="blog-content">
                             <h2>Mastering Nepali Typing: Unicode vs Preeti</h2>
