--- a/blogs.html
+++ b/blogs.html
@@ -142,7 +142,7 @@
                     
                     <article class="blog-card">
                         <div class="blog-image">
-                            <img src="https://i.ibb.co/0Q8fZ0y/blog6.jpg" alt="Astrology in Nepal" loading="lazy">
+                            <img src="https://i.ibb.co/B9yz9tg/Chat-GPT-Image-Apr-24-2025-02-07-24-PM.png" alt="Astrology in Nepal" loading="lazy">
                         </div>
                         <div class="blog-content">
                             <h2>The Role of Astrology in Nepali Culture</h2>
