--- a/blog-astrology-culture.html
+++ b/blog-astrology-culture.html
@@ -576,6 +576,10 @@
                         <li>Be wary of scam artists promising miracles</li>
                         <li>Consider both traditional and modern approaches</li>
                     </ol>
+                     <div class="calendar-tip">
+                        <h3>Conversion Tip:</h3>
+                        <p>To convert B.S. to Gregorian, subtract 57 years (for 2000s) or 56 years (for dates before April). But use our <a href="date-converter.html">Date Converter tool</a> for accurate conversions that account for month differences.</p>
+                    </div>
                     
                     <h2>Conclusion</h2>
                     <p>Astrology remains an integral part of Nepali culture, blending ancient wisdom with daily practice. While its influence may be evolving with modernization, it continues to shape personal and collective decisions across Nepal. Whether approached with full faith or cultural respect, understanding Nepali astrology provides valuable insight into the country's rich traditions.</p>
