--- a/blog-astrology-culture.html
+++ b/blog-astrology-culture.html
@@ -187,6 +187,48 @@
         body.dark-mode .astrology-table th {
             background-color: #2d2d2d;
         }
+         .calendar-tip {
+            background-color: #f0f7ff;
+            border-left: 4px solid var(--primary-color);
+            padding: 20px;
+            margin: 30px 0;
+            border-radius: 0 4px 4px 0;
+        }
+
+        body.dark-mode .calendar-tip {
+            background-color: #2a3a4a;
+        }
+
+        .calendar-tip h3 {
+            margin-top: 0;
+            color: var(--primary-color);
+        }
+
+        .calendar-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 30px 0;
+        }
+
+        .calendar-table th, .calendar-table td {
+            padding: 12px 15px;
+            text-align: left;
+            border-bottom: 1px solid var(--border-color);
+        }
+
+        body.dark-mode .calendar-table th,
+        body.dark-mode .calendar-table td {
+            border-bottom: 1px solid #444;
+        }
+
+        .calendar-table th {
+            background-color: #f8f9fa;
+            font-weight: 600;
+        }
+
+        body.dark-mode .calendar-table th {
+            background-color: #2d2d2d;
+        }
 
         /* Comparison Section */
         .comparison {
