--- a/blog-astrology-culture.html
+++ b/blog-astrology-culture.html
@@ -187,7 +187,7 @@
         body.dark-mode .astrology-table th {
             background-color: #2d2d2d;
         }
-         .calendar-tip {
+         .astro-tip {
             background-color: #f0f7ff;
             border-left: 4px solid var(--primary-color);
             padding: 20px;
@@ -199,18 +199,18 @@
             background-color: #2a3a4a;
         }
 
-        .calendar-tip h3 {
+        .astro-tip h3 {
             margin-top: 0;
             color: var(--primary-color);
         }
 
-        .calendar-table {
+        .astro-table {
             width: 100%;
             border-collapse: collapse;
             margin: 30px 0;
         }
 
-        .calendar-table th, .calendar-table td {
+        .astro-table th, .calendar-table td {
             padding: 12px 15px;
             text-align: left;
             border-bottom: 1px solid var(--border-color);
@@ -221,14 +221,14 @@
             border-bottom: 1px solid #444;
         }
 
-        .calendar-table th {
+        .astro-table th {
             background-color: #f8f9fa;
             font-weight: 600;
         }
 
-        body.dark-mode .calendar-table th {
+        body.dark-mode .astro-table th {
             background-color: #2d2d2d;
-        }
+        } 
 
         /* Comparison Section */
         .comparison {
@@ -618,10 +618,11 @@
                         <li>Be wary of scam artists promising miracles</li>
                         <li>Consider both traditional and modern approaches</li>
                     </ol>
-                     <div class="calendar-tip">
-                        <h3>Conversion Tip:</h3>
-                        <p>To convert B.S. to Gregorian, subtract 57 years (for 2000s) or 56 years (for dates before April). But use our <a href="date-converter.html">Date Converter tool</a> for accurate conversions that account for month differences.</p>
-                    </div>
+                    <div class="astro-tip">
+    <h3>Astrology Tip:</h3>
+    <p>Curious about your astrological details based on the Nepali calendar? Use our <a href="astro.html">View Astro</a> to get accurate insights including lunar dates and planetary positions.</p>
+</div>
+
                     
                     <h2>Conclusion</h2>
                     <p>Astrology remains an integral part of Nepali culture, blending ancient wisdom with daily practice. While its influence may be evolving with modernization, it continues to shape personal and collective decisions across Nepal. Whether approached with full faith or cultural respect, understanding Nepali astrology provides valuable insight into the country's rich traditions.</p>
