--- a/blog-SIP-investment.html
+++ b/blog-SIP-investment.html
@@ -362,6 +362,97 @@
         body.dark-mode footer {
             background-color: #1a1a1a;
         }
+        /* Footer Styles */
+footer {
+    background-color: #2c3e50;
+    color: var(--white);
+    padding: 40px 0 20px;
+}
+
+.footer-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 30px;
+    margin-bottom: 30px;
+}
+
+.footer-col h3 {
+    font-size: 1.2rem;
+    margin-bottom: 15px;
+    color: var(--white);
+}
+
+.footer-col p, .footer-col a {
+    color: #bdc3c7;
+    font-size: 0.9rem;
+    margin-bottom: 10px;
+    display: block;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.footer-col a:hover {
+    color: var(--white);
+}
+
+.footer-col ul {
+    list-style: none;
+}
+
+.footer-col ul li {
+    margin-bottom: 8px;
+}
+
+.footer-bottom {
+    text-align: center;
+    padding-top: 20px;
+    border-top: 1px solid #34495e;
+    font-size: 0.9rem;
+    color: #bdc3c7;
+}
+
+.footer-links {
+    margin-top: 10px;
+}
+
+.footer-links a {
+    color: #bdc3c7;
+    margin: 0 10px;
+    text-decoration: none;
+}
+
+.footer-links a:hover {
+    color: var(--white);
+}
+
+#newsletterForm {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#newsletterForm input {
+    padding: 8px 12px;
+    border-radius: 4px;
+    border: none;
+}
+
+/* Responsive Footer */
+@media (max-width: 768px) {
+    .footer-content {
+        grid-template-columns: 1fr 1fr;
+    }
+    
+    .footer-bottom {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .footer-links {
+        margin-top: 15px;
+    }
+}
     </style>
 </head>
 <body>
@@ -604,6 +695,65 @@
             </div>
         </div>
     </div>
+
+    <footer>
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-col">
+                <h3>Hamro Utility</h3>
+                <p>Daily essentials for every Nepali. Simple, fast, and reliable tools for your everyday needs.</p>
+            </div>
+            <div class="footer-col">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#tools">Tools</a></li>
+                    <li><a href="blogs.html">Blogs</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Popular Tools</h3>
+                <ul>
+                    <li><a href="date-converter.html">Date Converter</a></li>
+                    <li><a href="gold-price.html">Gold Price</a></li>
+                    <li><a href="forex.html">Forex Rates</a></li>
+                    <li><a href="weather.html">Weather</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Legal</h3>
+                <ul>
+                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                    <li><a href="terms-of-service.html">Terms of Service</a></li>
+                    <li><a href="about-developer.html">About Developer</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Newsletter</h3>
+                <p>Subscribe to get updates on new features and tools.</p>
+                <form id="newsletterForm">
+                    <input type="email" placeholder="Your email" required>
+                    <button type="submit" class="btn">Subscribe</button>
+                </form>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; <span id="current-year"></span> Hamro Utility. All rights reserved.</p>
+            <div class="footer-links">
+                <a href="privacy-policy.html">Privacy Policy</a>
+                <a href="terms-of-service.html">Terms of Service</a>
+                <a href="about-developer.html">About Developer</a>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<script>
+    // Update current year in footer
+    document.getElementById('current-year').textContent = new Date().getFullYear();
+</script>
 
     <script>
         // SIP Calculator Functionality
