--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
                                     <h4>Financial</h4>
                                     <a href="gold-price.html"><img src="https://i.ibb.co/V0Ty4WB2/gold-15751000.png" alt="Gold Price" height="16"> Gold Price</a>
                                     <a href="forex.html"><img src="https://i.ibb.co/Nd7xzqXr/currency-exchange-7169285.png" alt="Forex Rates" height="16"> Forex Rates</a>
+                                    <a href="emi.html"><img src="https://i.ibb.co/hJFZKcnC/7511619d-c293-42cc-a4c7-e1da27e1d676.png" alt="EMI Calculator" height="16"> EMI Calculator</a>
+                                    <a href="sip.html"><img src="https://i.ibb.co/d45VYGHT/58bff914-901b-4691-8f8d-54b71e3babb4.png" alt="SIP Calculator" height="16"> SIP Calculator</a>
                                 </div>
                                 <div class="dropdown-column">
                                     <h4>Utilities</h4>
                                     <a href="weather.html"><img src="https://i.ibb.co/PsrYBgR6/weather-1243442.png" alt="Weather" height="16"> Weather</a>
                                     <a href="astro.html"><img src="https://i.ibb.co/rGNrj16y/orbit-7027211.png" alt="Astro Summary" height="16"> Astro Summary</a>
                                     <a href="unit-converter.html"><img src="https://i.ibb.co/WvznMfwx/transfer-9201169.png" alt="Unit Converter" height="16"> Unit Converter</a>
+                                    <a href="vat.html"><img src="https://i.ibb.co/5WpT3PSn/Chat-GPT-Image-Apr-24-2025-08-02-31-PM-Edited-1.png" alt="VAT Calculator" height="16"> VAT Calculator</a>
                                 </div>
                                 <div class="dropdown-column">
                                     <h4>Nepali Typing</h4>
@@ -173,33 +176,33 @@
                         <h3>Forex Rates</h3>
                         <p>Currency exchange rates</p>
                     </a>
+                    <a href="emi.html" class="tool-card">
+                        <div class="icon">
+                            <img src="https://i.ibb.co/hJFZKcnC/7511619d-c293-42cc-a4c7-e1da27e1d676.png" alt="EMI Calculator" height="40">
+                        </div>
+                        <h3>EMI Calculator</h3>
+                        <p>Calculate loan EMIs</p>
+                    </a>
+                    <a href="sip.html" class="tool-card">
+                        <div class="icon">
+                            <img src="https://i.ibb.co/d45VYGHT/58bff914-901b-4691-8f8d-54b71e3babb4.png" alt="SIP Calculator" height="40">
+                        </div>
+                        <h3>SIP Calculator</h3>
+                        <p>Calculate SIP returns</p>
+                    </a>
+                    <a href="vat.html" class="tool-card">
+                        <div class="icon">
+                            <img src="https://i.ibb.co/5WpT3PSn/Chat-GPT-Image-Apr-24-2025-08-02-31-PM-Edited-1.png" alt="VAT Calculator" height="40">
+                        </div>
+                        <h3>VAT Calculator</h3>
+                        <p>Calculate VAT amounts</p>
+                    </a>
                     <a href="weather.html" class="tool-card">
                         <div class="icon">
                             <img src="https://i.ibb.co/PsrYBgR6/weather-1243442.png" alt="Weather" height="40">
                         </div>
                         <h3>Weather</h3>
                         <p>Weather forecast for Nepal</p>
-                    </a>
-                    <a href="astro.html" class="tool-card">
-                        <div class="icon">
-                            <img src="https://i.ibb.co/rGNrj16y/orbit-7027211.png" alt="Astro Summary" height="40">
-                        </div>
-                        <h3>Astro Summary</h3>
-                        <p>Daily astrological information</p>
-                    </a>
-                    <a href="unit-converter.html" class="tool-card">
-                        <div class="icon">
-                            <img src="https://i.ibb.co/WvznMfwx/transfer-9201169.png" alt="Unit Converter" height="40">
-                        </div>
-                        <h3>Unit Converter</h3>
-                        <p>Convert various measurements</p>
-                    </a>
-                    <a href="nepali-unicode.html" class="tool-card">
-                        <div class="icon">
-                            <img src="https://i.ibb.co/TqK54wkQ/communication-13573106.png" alt="Nepali Typing" height="40">
-                        </div>
-                        <h3>Nepali Typing</h3>
-                        <p>Type in Nepali Unicode</p>
                     </a>
                 </div>
             </div>
@@ -250,6 +253,7 @@
                             <li>Currency exchange rates from reliable sources</li>
                             <li>Weather forecasts for major Nepali cities</li>
                             <li>Astrological information and panchang</li>
+                            <li>Financial calculators for EMI, SIP, and VAT</li>
                             <li>All tools optimized for mobile devices</li>
                             <li>Low bandwidth consumption</li>
                         </ul>
@@ -342,7 +346,8 @@
                         <li><a href="date-converter.html">Date Converter</a></li>
                         <li><a href="gold-price.html">Gold Price</a></li>
                         <li><a href="forex.html">Forex Rates</a></li>
-                        <li><a href="weather.html">Weather</a></li>
+                        <li><a href="emi.html">EMI Calculator</a></li>
+                        <li><a href="sip.html">SIP Calculator</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
@@ -372,27 +377,6 @@
             </div>
         </div>
     </footer>
-
-    <!-- Floating Calculator Menu -->
-    <div class="calculator-container">
-      <div class="menu">
-        <a href="emi.html" class="menu-item emi">
-          <img src="https://i.ibb.co/hJFZKcnC/7511619d-c293-42cc-a4c7-e1da27e1d676.png" alt="EMI">
-          <span>EMI</span>
-        </a>
-        <a href="sip.html" class="menu-item sip">
-          <img src="https://i.ibb.co/d45VYGHT/58bff914-901b-4691-8f8d-54b71e3babb4.png" alt="SIP">
-          <span>SIP</span>
-        </a>
-        <a href="vat.html" class="menu-item vat">
-          <img src="https://i.ibb.co/5WpT3PSn/Chat-GPT-Image-Apr-24-2025-08-02-31-PM-Edited-1.png" alt="VAT">
-          <span>VAT</span>
-        </a>
-      </div>
-      <div class="main-icon">
-        <img src="https://i.ibb.co/fzfXnT1Z/calculator-7165247.png" alt="Calculator">
-      </div>
-    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
