--- a/sip.html
+++ b/sip.html
@@ -626,7 +626,7 @@
                         
                         <div class="form-group">
                             <label for="return-rate">
-                                <i class="fas fa-percent"></i> Expected Return Rate (% p.a.)
+                                <i class="fas fa-percent"></i> Expected Return Rate (12-15%)
                             </label>
                             <div class="input-with-slider">
                                 <input type="number" id="return-rate" min="1" max="30" step="0.1" value="12">
