--- a/emi.html
+++ b/emi.html
@@ -815,7 +815,7 @@
                 <div class="footer-col">
                     <h3>Hamro Utility</h3>
                     <p>Daily essentials for every Nepali. Simple, fast, and reliable tools for your everyday needs.</p>
-                    <p class="creator-credit">Created with ❤️ for Nepal</p>
+                    <p class="creator-credit">Created with ❤️ By Siddha Batala</p>
                 </div>
                 <div class="footer-col">
                     <h3>Quick Links</h3>
